[package]
name = "sublight"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
hyper = { version = "0.14.7", default-features = false, features = [ "client", "http1", "tcp" ] }
hyper-tls = "0.5.0"

[dev-dependencies]
mockito = { version = "0.30.0", default-features = false, features = [] }
tokio = { version = "1.5.0", default-features = false, features = [ "rt-multi-thread", "macros", "test-util" ] }
